[gd_scene load_steps=32 format=2]

[ext_resource path="res://Scenes/GameThings/BaseLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/GameLevels/Level_17.gd" type="Script" id=2]
[ext_resource path="res://Assets/Creatures-no-bg.png" type="Texture" id=3]
[ext_resource path="res://Assets/Objects/Sem Fundo.png" type="Texture" id=4]
[ext_resource path="res://Scenes/UI/LevelComplete.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/GameBasics/Goal.gd" type="Script" id=6]
[ext_resource path="res://Scripts/GameBasics/Player.gd" type="Script" id=7]
[ext_resource path="res://Scripts/GameBasics/PlayerSpriteMove.gd" type="Script" id=8]
[ext_resource path="res://Scenes/GameThings/pressurePlate.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Objects/Classic.png" type="Texture" id=10]
[ext_resource path="res://Assets/Blocks/Porta.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Blocks/Bandeira = Meta.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Blocks/Bot達o = Pisar.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Blocks/Cerca = Pare.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/Blocks/Haiiro = vc.tscn" type="PackedScene" id=15]
[ext_resource path="res://Assets/Blocks/Parede = Pare.tscn" type="PackedScene" id=16]
[ext_resource path="res://Assets/Blocks/IFs/Alavanca LV 17.png" type="Texture" id=17]
[ext_resource path="res://Assets/Blocks/IFs/Bot達o LV 17.png" type="Texture" id=18]
[ext_resource path="res://Assets/Objects/Modern.png" type="Texture" id=19]
[ext_resource path="res://Scripts/Butt0n.gd" type="Script" id=20]
[ext_resource path="res://Assets/Blocks/Sheet.png" type="Texture" id=21]
[ext_resource path="res://Assets/Objects/Alavanca.png" type="Texture" id=22]
[ext_resource path="res://Scripts/GameBasics/Help.gd" type="Script" id=23]
[ext_resource path="res://Assets/box.png" type="Texture" id=25]
[ext_resource path="res://Styles/Fonts/Help Font.tres" type="DynamicFont" id=26]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.66666, 6.66666 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.5, 6.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5.5, 4.5 )

[node name="Level_17" type="Node2D"]
script = ExtResource( 2 )

[node name="Blocks" type="Node" parent="."]

[node name="Parede = Pare" parent="Blocks" instance=ExtResource( 16 )]
position = Vector2( -32, 96 )

[node name="Porta" parent="Blocks" instance=ExtResource( 11 )]
position = Vector2( 128, -24 )

[node name="Bandeira = Meta" parent="Blocks" instance=ExtResource( 12 )]
position = Vector2( 16, 72 )

[node name="Bandeira = Meta2" type="Node2D" parent="Blocks"]
position = Vector2( 208, 80 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Blocks/Bandeira = Meta2"]
position = Vector2( -8, 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Bandeira = Meta2/StaticBody2D2"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Blocks/Bandeira = Meta2/StaticBody2D2"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 22 )

[node name="StaticBody2D3" type="StaticBody2D" parent="Blocks/Bandeira = Meta2"]
position = Vector2( 8, 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Bandeira = Meta2/StaticBody2D3"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Blocks/Bandeira = Meta2/StaticBody2D3"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 21 )
hframes = 10
vframes = 6
frame = 30

[node name="StaticBody2D4" type="StaticBody2D" parent="Blocks/Bandeira = Meta2"]
position = Vector2( 24, 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Bandeira = Meta2/StaticBody2D4"]
visible = false
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Blocks/Bandeira = Meta2/StaticBody2D4"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 21 )
hframes = 10
vframes = 6
frame = 25

[node name="Haiiro = vc" parent="Blocks" instance=ExtResource( 15 )]
position = Vector2( -32, 96 )

[node name="Bot達o = Pisar" parent="Blocks" instance=ExtResource( 13 )]
position = Vector2( 160, 56 )

[node name="Cerca = Pare" parent="Blocks" instance=ExtResource( 14 )]
position = Vector2( 64, -24 )

[node name="AlavancaLv17" type="Sprite" parent="Blocks"]
position = Vector2( 131, 117.5 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 17 )

[node name="Bot達oLv17" type="Sprite" parent="Blocks"]
position = Vector2( 131, 141.5 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 18 )

[node name="Decoration" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="Decoration"]
modulate = Color( 1, 1, 1, 0.737255 )
position = Vector2( 16, 32 )
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
flip_h = true
hframes = 20
vframes = 20
frame = 104

[node name="Sprite2" type="Sprite" parent="Decoration"]
modulate = Color( 1, 1, 1, 0.737255 )
position = Vector2( 32, 32 )
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
flip_h = true
hframes = 20
vframes = 20
frame = 102

[node name="Sprite3" type="Sprite" parent="Decoration"]
modulate = Color( 1, 1, 1, 0.737255 )
position = Vector2( 48, 32 )
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
flip_h = true
hframes = 20
vframes = 20
frame = 102

[node name="Sprite4" type="Sprite" parent="Decoration"]
modulate = Color( 1, 1, 1, 0.737255 )
position = Vector2( 64, 32 )
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
flip_h = true
hframes = 20
vframes = 20
frame = 102

[node name="Sprite9" type="Sprite" parent="Decoration"]
modulate = Color( 1, 1, 1, 0.737255 )
position = Vector2( 112, 64 )
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
flip_h = true
hframes = 20
vframes = 20
frame = 102

[node name="Sprite10" type="Sprite" parent="Decoration"]
modulate = Color( 1, 1, 1, 0.737255 )
position = Vector2( 128, 64 )
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
flip_h = true
hframes = 20
vframes = 20
frame = 102

[node name="Sprite11" type="Sprite" parent="Decoration"]
modulate = Color( 1, 1, 1, 0.737255 )
position = Vector2( 144, 64 )
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
flip_h = true
hframes = 20
vframes = 20
frame = 102

[node name="Sprite5" type="Sprite" parent="Decoration"]
modulate = Color( 1, 1, 1, 0.737255 )
position = Vector2( 80, 32 )
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
flip_h = true
hframes = 20
vframes = 20
frame = 106

[node name="Sprite6" type="Sprite" parent="Decoration"]
modulate = Color( 1, 1, 1, 0.737255 )
position = Vector2( 80, 48 )
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
flip_v = true
hframes = 20
vframes = 20
frame = 106

[node name="Sprite7" type="Sprite" parent="Decoration"]
modulate = Color( 1, 1, 1, 0.737255 )
position = Vector2( 96, 48 )
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
flip_h = true
hframes = 20
vframes = 20
frame = 106

[node name="Sprite12" type="Sprite" parent="Decoration"]
modulate = Color( 1, 1, 1, 0.737255 )
position = Vector2( 160, 64 )
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
flip_h = true
flip_v = true
hframes = 20
vframes = 20
frame = 106

[node name="Sprite8" type="Sprite" parent="Decoration"]
modulate = Color( 1, 1, 1, 0.737255 )
position = Vector2( 96, 64 )
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
flip_v = true
hframes = 20
vframes = 20
frame = 106

[node name="Sprite13" type="Sprite" parent="Decoration"]
position = Vector2( 240, 56 )
scale = Vector2( 1.23077, 1.23077 )
z_index = 4
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 87

[node name="Sprite14" type="Sprite" parent="Decoration"]
position = Vector2( 1.52588e-05, 40 )
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 83

[node name="Sprite15" type="Sprite" parent="Decoration"]
position = Vector2( 3.05176e-05, 72 )
scale = Vector2( 1.23077, 1.23077 )
z_index = 1
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 92

[node name="Sprite16" type="Sprite" parent="Decoration"]
position = Vector2( 8, 72 )
scale = Vector2( 1.23077, 1.23077 )
z_index = 1
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 92

[node name="Sprite17" type="Sprite" parent="Decoration"]
position = Vector2( 16, 72 )
scale = Vector2( 1.23077, 1.23077 )
z_index = 1
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 92

[node name="Sprite18" type="Sprite" parent="Decoration"]
position = Vector2( 24, 72 )
scale = Vector2( 1.23077, 1.23077 )
z_index = 1
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 92

[node name="Sprite19" type="Sprite" parent="Decoration"]
position = Vector2( 32, 72 )
scale = Vector2( 1.23077, 1.23077 )
z_index = 1
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 92

[node name="Sprite20" type="Sprite" parent="Decoration"]
position = Vector2( 40, 72 )
scale = Vector2( 1.23077, 1.23077 )
z_index = 1
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 92

[node name="Walls" type="Node" parent="."]

[node name="Fence" type="Node" parent="Walls"]

[node name="GenericObject1" type="KinematicBody2D" parent="Walls/Fence"]
position = Vector2( 0, 64 )

[node name="Sprite" type="Sprite" parent="Walls/Fence/GenericObject1"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 78

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Fence/GenericObject1"]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="GenericObject2" type="KinematicBody2D" parent="Walls/Fence"]
position = Vector2( 16, 64 )

[node name="Sprite" type="Sprite" parent="Walls/Fence/GenericObject2"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
flip_h = true
hframes = 20
vframes = 20
frame = 78

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Fence/GenericObject2"]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="GenericObject3" type="KinematicBody2D" parent="Walls/Fence"]
position = Vector2( 32, 64 )

[node name="Sprite" type="Sprite" parent="Walls/Fence/GenericObject3"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 78

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Fence/GenericObject3"]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="GenericObject4" type="KinematicBody2D" parent="Walls/Fence"]
position = Vector2( 0, 56 )

[node name="Sprite" type="Sprite" parent="Walls/Fence/GenericObject4"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 78

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Fence/GenericObject4"]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="GenericObject5" type="KinematicBody2D" parent="Walls/Fence"]
position = Vector2( 32, 56 )

[node name="Sprite" type="Sprite" parent="Walls/Fence/GenericObject5"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 78

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Fence/GenericObject5"]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="GenericObject6" type="KinematicBody2D" parent="Walls/Fence"]
position = Vector2( 0, 48 )

[node name="Sprite" type="Sprite" parent="Walls/Fence/GenericObject6"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 78

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Fence/GenericObject6"]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="GenericObject7" type="KinematicBody2D" parent="Walls/Fence"]
position = Vector2( 32, 48 )

[node name="Sprite" type="Sprite" parent="Walls/Fence/GenericObject7"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 78

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Fence/GenericObject7"]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="Wall" type="Node" parent="Walls"]

[node name="GenericObject7" type="KinematicBody2D" parent="Walls/Wall"]
modulate = Color( 0.694118, 0.737255, 0.85098, 1 )
position = Vector2( 176, 48 )

[node name="Sprite" type="Sprite" parent="Walls/Wall/GenericObject7"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 71

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall/GenericObject7"]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="GenericObject8" type="KinematicBody2D" parent="Walls/Wall"]
modulate = Color( 0.694118, 0.737255, 0.85098, 1 )
position = Vector2( 144, 48 )

[node name="Sprite" type="Sprite" parent="Walls/Wall/GenericObject8"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 67

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall/GenericObject8"]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="GenericObject9" type="KinematicBody2D" parent="Walls/Wall"]
modulate = Color( 0.694118, 0.737255, 0.85098, 1 )
position = Vector2( 144, 32 )

[node name="Sprite" type="Sprite" parent="Walls/Wall/GenericObject9"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 67

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall/GenericObject9"]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="GenericObject10" type="KinematicBody2D" parent="Walls/Wall"]
modulate = Color( 0.694118, 0.737255, 0.85098, 1 )
position = Vector2( 144, 16 )

[node name="Sprite" type="Sprite" parent="Walls/Wall/GenericObject10"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 67

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall/GenericObject10"]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="GenericObject11" type="KinematicBody2D" parent="Walls/Wall"]
modulate = Color( 0.694118, 0.737255, 0.85098, 1 )
position = Vector2( 144, 0 )

[node name="Sprite" type="Sprite" parent="Walls/Wall/GenericObject11"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 70

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall/GenericObject11"]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="GenericObject12" type="KinematicBody2D" parent="Walls/Wall"]
modulate = Color( 0.694118, 0.737255, 0.85098, 1 )
position = Vector2( 240, 48 )

[node name="Sprite" type="Sprite" parent="Walls/Wall/GenericObject12"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 67

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall/GenericObject12"]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="GenericObject16" type="KinematicBody2D" parent="Walls/Wall"]
modulate = Color( 0.694118, 0.737255, 0.85098, 1 )
position = Vector2( 224, 48 )

[node name="Sprite" type="Sprite" parent="Walls/Wall/GenericObject16"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 67

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall/GenericObject16"]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="GenericObject17" type="KinematicBody2D" parent="Walls/Wall"]
modulate = Color( 0.694118, 0.737255, 0.85098, 1 )
position = Vector2( 208, 64 )

[node name="Sprite" type="Sprite" parent="Walls/Wall/GenericObject17"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 67

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall/GenericObject17"]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="GenericObject18" type="KinematicBody2D" parent="Walls/Wall"]
modulate = Color( 0.694118, 0.737255, 0.85098, 1 )
position = Vector2( 224, 64 )

[node name="Sprite" type="Sprite" parent="Walls/Wall/GenericObject18"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 67

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall/GenericObject18"]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="GenericObject13" type="KinematicBody2D" parent="Walls/Wall"]
modulate = Color( 0.694118, 0.737255, 0.85098, 1 )
position = Vector2( 224, 32 )

[node name="Sprite" type="Sprite" parent="Walls/Wall/GenericObject13"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 67

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall/GenericObject13"]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="GenericObject19" type="KinematicBody2D" parent="Walls/Wall"]
modulate = Color( 0.694118, 0.737255, 0.85098, 1 )
position = Vector2( 208, 32 )

[node name="Sprite" type="Sprite" parent="Walls/Wall/GenericObject19"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 67

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall/GenericObject19"]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="GenericObject14" type="KinematicBody2D" parent="Walls/Wall"]
modulate = Color( 0.694118, 0.737255, 0.85098, 1 )
position = Vector2( 192, 64 )

[node name="Sprite" type="Sprite" parent="Walls/Wall/GenericObject14"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 67

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall/GenericObject14"]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="GenericObject15" type="KinematicBody2D" parent="Walls/Wall"]
modulate = Color( 0.694118, 0.737255, 0.85098, 1 )
position = Vector2( 176, 64 )

[node name="Sprite" type="Sprite" parent="Walls/Wall/GenericObject15"]
scale = Vector2( 1.23077, 1.23077 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 65

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall/GenericObject15"]
position = Vector2( 8, 8 )
shape = SubResource( 6 )

[node name="BaseLevel" parent="." instance=ExtResource( 1 )]

[node name="Door" type="StaticBody2D" parent="."]
position = Vector2( 168, 56 )
scale = Vector2( 1.2, 1.2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2( 0, 7.62939e-06 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Door"]
texture = ExtResource( 10 )
hframes = 20
vframes = 20
frame = 24

[node name="Node2D" parent="." instance=ExtResource( 9 )]
position = Vector2( -176, 32 )

[node name="Goal" type="Node2D" parent="."]
position = Vector2( 232, -16 )
script = ExtResource( 6 )
nextLevelPath = "res://Scenes/GameLevels/Level_18.tscn"
goalNumber = 1

[node name="Sprite" type="Sprite" parent="Goal"]
position = Vector2( 16, 24 )
texture = ExtResource( 4 )
hframes = 20
vframes = 10
frame = 176
script = ExtResource( 8 )

[node name="Area2D" type="Area2D" parent="Goal/Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal/Sprite/Area2D"]
shape = SubResource( 4 )

[node name="Tween" type="Tween" parent="Goal/Sprite"]

[node name="RayCast2D" type="RayCast2D" parent="Goal/Sprite"]
cast_to = Vector2( 0, 16 )

[node name="LevelComplete" parent="Goal" instance=ExtResource( 5 )]

[node name="Player" type="KinematicBody2D" parent="." groups=["player"]]
position = Vector2( 16, 16 )
z_index = 2
script = ExtResource( 7 )

[node name="Player" type="Sprite" parent="Player"]
position = Vector2( 3, 3 )
texture = ExtResource( 3 )
centered = false
hframes = 17
vframes = 15
frame = 186

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 7.5, 8.5 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="Player"]
position = Vector2( 8, 8 )
cast_to = Vector2( 0, 16 )

[node name="Tween" type="Tween" parent="Player"]

[node name="Button1" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.647059 )
position = Vector2( 216, 56 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 19 )
hframes = 20
vframes = 21
frame = 304
script = ExtResource( 20 )
buttonNumber = 1

[node name="Area2D" type="Area2D" parent="Button1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button1/Area2D"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 5 )

[node name="Help" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 23 )

[node name="Help" type="Control" parent="Help"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="ColorRect" parent="Help/Help"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.2, 0.207843, 0.211765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Help/Help"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Var" type="VBoxContainer" parent="Help/Help/HBoxContainer"]
margin_right = 638.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( -592, -56 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WhatVar" type="Label" parent="Help/Help/HBoxContainer/Var"]
margin_right = 638.0
margin_bottom = 93.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 26 )
text = "
Define qual 辿 o objeto
"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Help/Help/HBoxContainer/Var"]
margin_top = 97.0
margin_right = 638.0
margin_bottom = 382.0

[node name="Level Things" type="Label" parent="Help/Help/HBoxContainer/Var/HBoxContainer"]
margin_right = 638.0
margin_bottom = 285.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 26 )
text = "  - Haiiro 

  - Parede

  - Botao

  - Alavanca

  - Bandeira"

[node name="Haiiro" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
position = Vector2( 218, 108 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
hframes = 17
vframes = 15
frame = 186

[node name="Parede2" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
modulate = Color( 0.694118, 0.737255, 0.85098, 1 )
position = Vector2( 194, 140 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 65

[node name="Parede3" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
modulate = Color( 0.694118, 0.737255, 0.85098, 1 )
position = Vector2( 250, 140 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 67

[node name="Parede4" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
modulate = Color( 0.694118, 0.737255, 0.85098, 1 )
position = Vector2( 306, 140 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 70

[node name="Parede5" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
modulate = Color( 0.694118, 0.737255, 0.85098, 1 )
position = Vector2( 362, 140 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )
centered = false
hframes = 20
vframes = 20
frame = 71

[node name="Bandeira" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
position = Vector2( 218, 356 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
hframes = 20
vframes = 10
frame = 176

[node name="Caveira" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
visible = false
position = Vector2( 216, 344 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
hframes = 20
vframes = 10
frame = 197

[node name="Box" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
visible = false
position = Vector2( 192, 256 )
scale = Vector2( 3, 3 )
texture = ExtResource( 25 )
centered = false

[node name="Bot達o" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
position = Vector2( 194, 204 )
scale = Vector2( 4, 4 )
texture = ExtResource( 19 )
centered = false
hframes = 20
vframes = 21
frame = 152

[node name="Alavanca" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
modulate = Color( 1, 1, 1, 0.647059 )
position = Vector2( 274, 292 )
scale = Vector2( 4, 4 )
texture = ExtResource( 19 )
hframes = 20
vframes = 21
frame = 304

[node name="Alavanca2" type="Sprite" parent="Help/Help/HBoxContainer/Var"]
modulate = Color( 1, 1, 1, 0.647059 )
position = Vector2( 218, 292 )
scale = Vector2( 4, 4 )
texture = ExtResource( 19 )
hframes = 20
vframes = 21
frame = 305

[node name="Value" type="VBoxContainer" parent="Help/Help/HBoxContainer"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WhatVal" type="Label" parent="Help/Help/HBoxContainer/Value"]
margin_right = 638.0
margin_bottom = 93.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 26 )
text = "
Define o que vai acontecer com o objeto
"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Help/Help/HBoxContainer/Value"]
margin_top = 97.0
margin_right = 638.0
margin_bottom = 574.0

[node name="Level Things" type="Label" parent="Help/Help/HBoxContainer/Value/HBoxContainer"]
margin_right = 638.0
margin_bottom = 477.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 26 )
text = "  - Voc棚: O que vai ser controlado

  - Pare: Nao pode ser atravessado

  - Usar: Ao entrar e apertar e tecla E
  uma funcao vai ser executada

  - Pisar: Ao entrar um fun巽達ao vai ser
  executada

  - Meta:Ao entrar em todas a fase sera
  concluida

  - Jogador: Faz o objeto que for
  enviado receba o valor Voc棚"

[connection signal="body_entered" from="Goal/Sprite/Area2D" to="Goal" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Goal/Sprite/Area2D" to="Goal" method="_on_Area2D_body_exited"]
[connection signal="area_entered" from="Button1/Area2D" to="Button1" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Button1/Area2D" to="Button1" method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Button1/Area2D" to="Button1" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Button1/Area2D" to="Button1" method="_on_Area2D_body_exited"]
